<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.anagramgame.start.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_selectDiffFragment"
            app:destination="@id/selectDiffFragment" />
    </fragment>
    <fragment
        android:id="@+id/scoreListFragment"
        android:name="com.example.anagramgame.score.ScoreListFragment"
        android:label="@string/score_list_label"
        tools:layout="@layout/fragment_score_list" />
    <fragment
        android:id="@+id/selectDiffFragment"
        android:name="com.example.anagramgame.select.SelectDiffFragment"
        android:label="@string/select_difficulty_label"
        tools:layout="@layout/fragment_select_diff" >
        <action
            android:id="@+id/action_selectDiffFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.anagramgame.game.GameFragment"
        android:label="@string/game_label"
        tools:layout="@layout/fragment_game">
        <argument
            android:name="difficulty"
            app:argType="string" />
        <action
            android:id="@+id/action_gameFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
        <action
            android:id="@+id/action_gameFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.anagramgame.result.ResultFragment"
        android:label="@string/results_label"
        tools:layout="@layout/fragment_result">
        <action
            android:id="@+id/action_resultFragment_to_selectDiffFragment"
            app:destination="@id/selectDiffFragment" />
        <action
            android:id="@+id/action_resultFragment_to_startFragment"
            app:destination="@id/startFragment" />
        <argument
            android:name="resultsArray"
            app:argType="string[]" />
    </fragment>
</navigation>