<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="gameViewModel"
            type="com.example.anagramgame.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".game.GameFragment">

        <TextView
            android:id="@+id/anagramTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@{gameViewModel.anagram}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wordCountTextView"
            tools:text="roecs" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/answerTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anagramTextView"
            android:hint="@string/your_answer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/answerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textNoSuggestions"
                android:maxLines="1"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> gameViewModel.onSkip()}"
            android:text="@string/skip"
            app:layout_constraintBaseline_toBaselineOf="@+id/submitButton"
            app:layout_constraintEnd_toStartOf="@+id/submitButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="@{() -> gameViewModel.onSubmit()}"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/skipButton"
            app:layout_constraintTop_toBottomOf="@+id/answerTextInputLayout" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:text="@{@string/score_text(gameViewModel.score)}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/wordCountTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Score: 60" />

        <TextView
            android:id="@+id/wordCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@{@string/count_text(gameViewModel.numWords)}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBaseline_toBaselineOf="@+id/scoreTextView"
            app:layout_constraintEnd_toStartOf="@+id/scoreTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Word 4 of 20" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>